# zydis-js

./: .gitignore  .npmignore  CMakeLists.txt  README.md  lib.c  package.json  tsconfig.json  webpack.config.js  zydis.min.js
examples/node-app/: app.ts  package.json  tsconfig.json
examples/svelte-browser/: .prettierrc  package.json  vite.config.ts
examples/svelte-browser/src/routes/: +layout.svelte  +page.svelte
src/: common.ts  decoder.ts  encoder.ts  enums.ts  formatter.ts  index.ts  misc.ts  native.d.ts  native.mjs  native.ts  register.ts  util.ts  zydis.d.ts  zydis.mjs  zydis.wasm
